# sere

./: .gitignore  Algo.hpp  BisimNfasl.cpp  BisimNfasl.hpp  BoolExpr.cpp  BoolExpr.hpp  CMakeLists.txt  Cnf.cpp  Cnf.hpp  DAG.hpp  EvalSere.cpp  EvalSere.hpp  LICENSE  Language.cpp  Language.hpp  Letter.cpp  Letter.hpp  Located.hpp  Makefile  Nfasl.cpp  Nfasl.hpp  NfaslTests.cpp  NfaslTests.hpp  Parser.cpp  Parser.hpp  README.md  RTP.cpp  RTP.hpp  RtNfasl.cpp  RtNfasl.hpp  Sere.g4  SereLibConfig.h.in  SereTests.cpp  TestBoolExpr.hpp  TestLetter.hpp  TestTools.hpp  Z3.cpp  Z3.hpp  benchmark.debug.txt  benchmark.release.txt
.github/workflows/: codeql-analysis.yml
ast/: BoolExpr.cpp  BoolExpr.hpp  Common.hpp  Located.hpp  Parser.cpp  SereExpr.cpp  SereExpr.hpp
boolean/: Expr.cpp
compute/: Ast.cpp  Ast.hpp  CMakeLists.txt  Compute.g4  ComputeLexer.g4  ComputeParser.g4  Error.cpp  Error.hpp  Infer.cpp  Infer.hpp  Lexer.g4  NameContext.cpp  NameContext.hpp  Ops.cpp  Ops.hpp  Parser.cpp  Parser.hpp  Typed.cpp  Typed.hpp
lib/: Algo.hpp  CMakeLists.txt  Match.hpp  Sere.g4
lib/api/: sere.cpp  sere.h  sere.hpp
lib/ast/: BoolExpr.hpp  Common.hpp  Located.hpp  Parser.cpp  Parser.hpp  SereExpr.cpp  SereExpr.hpp
lib/boolean/: Expr.cpp  Expr.hpp
lib/nfasl/: BisimNfasl.cpp  BisimNfasl.hpp  Dfasl.cpp  Dfasl.hpp  Dot.cpp  Dot.hpp  Nfasl.cpp  Nfasl.hpp
lib/rt/: Executor.hpp  Format.hpp  Loader.cpp  Loader.hpp  RtContext.hpp  RtDfasl.cpp  RtDfasl.hpp  RtNfasl.cpp  RtNfasl.hpp  RtPredicate.hpp  Saver.hpp
lib/sat/: Cnf.cpp  Cnf.hpp  Sat.cpp  Sat.hpp  Simplify.cpp  Simplify.hpp  Transform.cpp  Transform.hpp  Z3.cpp  Z3.hpp
minisat/: CMakeLists.txt
nfasl/: BisimNfasl.hpp  Nfasl.cpp  Nfasl.hpp
python/: CMakeLists.txt  setup.py
python/extension/: CMakeLists.txt  compile.c  compile.h  helpers.h  load.c  load.h  load_extended.c  load_extended.h  module.c  seremodule.c
python/sere/: __init__.py
python/test/: run.py  tutorial.py
rt/: RtNfasl.cpp  RtPredicate.cpp  RtPredicate.hpp
sat/: Cnf.cpp  Z3.cpp  Z3.hpp
test/: Benchmark.cpp  CMakeLists.txt  CompareExprs.cpp  CompareExprs.hpp  EvalBoolExpr.cpp  EvalBoolExpr.hpp  EvalDfasl.cpp  EvalDfasl.hpp  EvalExpr.cpp  EvalExpr.hpp  EvalNfasl.cpp  EvalNfasl.hpp  EvalRt.cpp  EvalRt.hpp  EvalRtNfasl.cpp  EvalSere.cpp  EvalSere.hpp  GenBoolExpr.hpp  GenDfasl.cpp  GenDfasl.hpp  GenExpr.hpp  GenLetter.hpp  GenNfasl.cpp  GenNfasl.hpp  Letter.cpp  Letter.hpp  Main.cpp  NfaslTests.cpp  SereTests.cpp  TestApi.cpp  TestDfasl.cpp  TestExpr.cpp  TestExtended.cpp  TestLetter.hpp  TestNfasl.cpp  TestParser.cpp  TestRt.cpp  TestRtNfasl.cpp  TestSere.cpp  TestTools.hpp  (+5 more)
test/compute/: CMakeLists.txt  TestParser.cpp
tool/: CMakeLists.txt  Main.cpp  sample.py  seremodule.c  setup.py
